--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      
      hiiiiii this is my webpage :)))
      <br/>
-     <a>https://github.com/Moranpn/PokemonCardProject</a>
+     <a href="https://github.com/Moranpn/PokemonCardProject">GitHub Page</a>
   
         
     </body>
